# CompilerToolHelper

./: LICENSE
CompilerToolHelper/: CMakeLists.txt  configure.py
CompilerToolHelper/src/: MathFunctions.cpp  MathFunctions.h  main.cpp
DynamicToolValidator/: CMakeLists.txt  validate.py
DynamicToolValidator/src/: CRC_Utils.cpp  CRC_Utils.h  main.cpp
ToolchainTestHarness/: CMakeLists.txt  configure.py  run_ci_test.sh
ToolchainTestHarness/src/: CRC_Utils.cpp  CRC_Utils.h  main.cpp
